# SolarHeater

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
cspell/: CodeSpellCheck.md  project-words.txt
src/: Pump.hpp  SolarPanel.hpp  StorageTank.hpp
test/: CMakeLists.txt  unittest.cpp
